language_tests/source_files/valid/sync_spawn_sleep_main.tr
func main() {
    std.print("hello\n")

    let _ = std.futures.spawn(|| async {
        await std.futures.sleep(std.time.Duration.fromMillis(1_u64))
        std.print("world\n")
    })
}
