language_tests/source_files/invalid/fstring_empty_interpolation.tr
func main() {
    let _ = f"{}"
}
